# Linkedin-Job-Monitor-DB

./: Linked Jobs Monitor.command  README.md  app.py  config.example.ini  config.ini  pyproject.toml
.job_state/: jobs.sqlite3
docs/: architecture.md
reports/: linkedin-new-jobs-2026-05-06_134154.md
src/linked_jobs_monitor/: __init__.py  app.py  cli.py  config.py  database.py  fetch.py  linkedin.py  parser.py  report.py  store.py  web.py
src/linked_jobs_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_database.py  test_linkedin.py  test_parser.py  test_web.py
